--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title><%= pageTitle %></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"
+    ></script>
     <style>
       /* Add your CSS styles here */
       body {
         text-align: center;
+        background-color: lightcyan;
       }
       nav {
         display: flex;
@@ -19,12 +29,12 @@
       }
       nav a {
         text-decoration: none;
-        color: #333; 
-        transition: color 0.3s ease-in-out; 
+        color: #333;
+        transition: color 0.3s ease-in-out;
       }
 
       nav a:hover {
-        color: #f00; 
+        color: #f00;
       }
 
       .navbar-nav li {
@@ -34,19 +44,85 @@
       .navbar-nav li:last-child {
         margin-right: 0;
       }
-
-      form {
-        max-width: 500px;
+      .contact {
+        margin-top: 100px;
+      }
+      
+      .form4  {
         margin: 50px auto;
-      }
-      .contact{
-        margin-top:100px;
-      }
+        background-size: cover;
+        
+}
+
+
+
+.form-bg {
+    background: rgba(68, 68, 65, 0.77);
+    padding: 20px;
+}
+
+.form {
+    background-color: white !important;
+    padding: 20px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+.form-control {
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 1px solid #61615e;
+    background: transparent;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+}
+
+button.btn {
+    display: block;
+    padding: 11px 32px;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    margin: 30px 0px;
+}
+
+.btn-blue {
+    background-color: #4285f4;
+    color: #fff;
+    border: 1px solid #4285f4;
+    
+}
+
     </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -65,22 +141,51 @@
     </nav>
 
     <main>
-      <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      <div class="form4 ">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-7 col-md-offset-2">
+              <div class="form-bg">
+                <form class="form">
+                  <div class="form-group">
+                    <label class="sr-only">Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      required=""
+                      id="nameNine"
+                      placeholder="Your Name"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only">Email</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      required=""
+                      id="emailNine"
+                      placeholder="Email Address"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label class="sr-only">Name</label>
+                    <textarea
+                      class="form-control"
+                      required=""
+                      rows="7"
+                      id="messageNine"
+                      placeholder="Write message"
+                    ></textarea>
+                  </div>
+                  <button type="submit" class="btn text-center btn-blue">
+                    Send Message
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </div>
       <div class="contact">
         <h1>Contact Us</h1>
         <p>Get in touch with us!</p>
