--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,6 +18,7 @@
       /* Add your CSS styles here */
       body {
         text-align: center;
+        background-color: lightcyan
       }
       nav {
         display: flex;
@@ -42,6 +43,9 @@
 
       .navbar-nav li:last-child {
         margin-right: 0;
+      }
+      .home{
+        margin: 100px auto;
       }
     </style>
   </head>
@@ -73,7 +77,9 @@
       </div>
     </nav>
 
-    <h1>Home Page</h1>
-    <p>Welcome to Ahmad's website!</p>
+    <div class="home">
+      <h1>Home Page</h1>
+      <p>Welcome to Ahmad's website!</p>
+    </div>
   </body>
 </html>
