--- a/views/services.ejs
+++ b/views/services.ejs
@@ -16,6 +16,7 @@
         justify-content: center;
         align-items: center;
         height: 50px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
       }
       nav a {
         text-decoration: none;
@@ -24,7 +25,7 @@
       }
 
       nav a:hover {
-        color: #f00; 
+        color: rgb(185, 185, 185); 
       }
 
       .navbar-nav li {
@@ -34,6 +35,26 @@
       .navbar-nav li:last-child {
         margin-right: 0;
       }
+
+      head,
+       body{background-color: lightcyan}
+      .card{cursor: pointer}
+      .hd{font-size: 25px;font-weight: 550}
+      .card.hover,
+       .card:hover{box-shadow: 0 20px 40px rgba(0, 0, 0, .2)}
+       .img{margin-bottom: 35px;-webkit-filter: drop-shadow(5px 5px 5px #222);filter: drop-shadow(5px 5px 5px #222)}
+       .card-title{font-weight: 600}
+       button.focus,
+        button:focus{outline: 0;box-shadow: none !important}
+        .ft{margin-top: 25px}.chk{margin-bottom: 5px}
+        .rck{margin-top: 20px;padding-bottom: 15px}
+
+        .card  {
+    margin-right: 20px;
+  }
+  .card:last-child {
+    margin-right: 0;
+  }
     </style>
   </head>
   <body>
@@ -57,7 +78,46 @@
     </nav>
 
     
-    <h1>Our Services</h1>
-    <p>Check out our awesome services!</p>
+    <div class='container-fluid mx-auto mt-5 mb-5 col-12' style="text-align: center">
+      <div class="hd">Why People Believe in Us</div>
+      <p><small class="text-muted">Always render more and better service than <br />is expected of you, no matter what your ask may be.</small></p>
+      <div class="row" style="justify-content: center">
+          <div class="card col-md-3 col-12">
+              <div class="card-content">
+                  <div class="card-body"> <img class="img" src="https://i.imgur.com/S7FJza5.png" />
+                      <div class="shadow"></div>
+                      <div class="card-title"> We're Free </div>
+                      <div class="card-subtitle">
+                          <p> <small class="text-muted">We spent thousands of hours creating on algorithm that does this for you in seconds. We collect a small fee from the professional after they meet your</small> </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="card col-md-3 col-12 ml-2">
+              <div class="card-content">
+                  <div class="card-body"> <img class="img" src="https://i.imgur.com/xUWJuHB.png" />
+                      <div class="card-title"> We're Unbiased </div>
+                      <div class="card-subtitle">
+                          <p> <small class="text-muted"> We don't accept ads from anyone. We use actual data to match you who the best person for each job </small> </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="card col-md-3 col-12 ml-2">
+              <div class="card-content">
+                  <div class="card-body"> <img class="img rck" src="https://i.imgur.com/rG3CGn3.png" />
+                      <div class="card-title"> We Guide you </div>
+                      <div class="card-subtitle">
+                          <p> <small class="text-muted">Buying or selling a home is often the largest transaction anyone does in their life. we guide you through the process so that you can be confident in reaching your dream outcome.</small> </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="ft">
+          <p class="chk"><small class="text-muted">Still not sure?</small></p>
+          <div class="btn btn-primary">Read All Testimonials</div>
+      </div>
+  </div>
   </body>
 </html>
